# python-ocr

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/controller/: api.py
src/domain/: document.py
src/infrastructure/: dynamodb_repository.py  textract_service.py
src/interface/: ocr_service.py  repository.py
src/usecase/: document_processor.py
tests/: test_ocr_pipeline.py
